--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Comment\ValueObjects\" />
+    <Folder Include="Entities\Post\Interfaces\" />
+    <Folder Include="Entities\Post\ValueObjects\" />
+    <Folder Include="Entities\User\ValueObjects\" />
+  </ItemGroup>
+
 </Project>
