feat: add database connection string for local environtment. This will be change in the future for a most secure way

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CleanArchitecture;User Id=sa;Password=Testing12345*;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
