--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Common\Interfaces\" />
     <Folder Include="Entities\Comment\ValueObjects\" />
     <Folder Include="Entities\Post\Interfaces\" />
     <Folder Include="Entities\Post\ValueObjects\" />
