--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -1,13 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Interfaces\" />
+    <Compile Remove="Common\Interfaces\**" />
+    <EmbeddedResource Remove="Common\Interfaces\**" />
+    <None Remove="Common\Interfaces\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Entities\Comment\ValueObjects\" />
     <Folder Include="Entities\Post\Interfaces\" />
     <Folder Include="Entities\Post\ValueObjects\" />
